# learn-deep-learning

./: 2252938沈诗凡_ANN1.ipynb  2252938沈诗凡_ANN2.ipynb  2252938沈诗凡_CNN.ipynb  2252938沈诗凡_CNNSmallData_2.ipynb  2252938沈诗凡_Deep_1.ipynb  2252938沈诗凡_Deep_2.ipynb  2252938沈诗凡_MNIST.ipynb  2252938沈诗凡_RNN_1.ipynb  2252938沈诗凡_RNN_2.ipynb  2252938沈诗凡_TS_1.ipynb  2252938沈诗凡_TS_2.ipynb  2252938沈诗凡_TS_3.ipynb  pyproject.toml
