[project]
name = "learn-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icrawler>=0.6.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
